# stockton

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: lint.yml  test.yml
examples/input-codegen/: Cargo.toml
examples/input-codegen/src/: main.rs
examples/render/: Cargo.toml
examples/render-bsp/: Cargo.toml
examples/render-bsp/data/: newtest.bsp  newtest.map  test.bsp  test.map
examples/render-bsp/src/: main.rs
examples/render-quad/: Cargo.toml  README.md
examples/render-quad/src/: draw_pass.rs  level.rs  main.rs  system.rs
examples/render-quad/src/data/: shader.frag  shader.vert
examples/render-triangles/: Cargo.toml  README.md
examples/render-triangles/src/: main.rs
examples/render/src/: main.rs
rendy-descriptor/: Cargo.toml
rendy-descriptor/src/: allocator.rs
rendy-memory/: Cargo.toml
rendy-memory/src/: memory.rs
rendy-memory/src/allocator/: dynamic.rs  linear.rs
rendy-memory/src/mapping/: mod.rs
stockton-contrib/: Cargo.toml
stockton-contrib/src/: delta_time.rs  flycam.rs  lib.rs
stockton-input/: Cargo.toml
stockton-input-codegen/: Cargo.toml
stockton-input-codegen/src/: lib.rs
stockton-input/src/: axis.rs  button.rs  lib.rs  manager.rs  mouse.rs
stockton-levels/: Cargo.toml
stockton-levels/src/: coords.rs  features.rs  helpers.rs  lib.rs  prelude.rs  types.rs
stockton-levels/src/parts/: entities.rs  faces.rs  mod.rs  textures.rs  vertices.rs  visdata.rs
stockton-levels/src/q3/: brushes.rs  effects.rs  entities.rs  faces.rs  file.rs  header.rs  light_maps.rs  light_vols.rs  mod.rs  models.rs  planes.rs  textures.rs  tree.rs  vertices.rs  visdata.rs
stockton-levels/src/traits/: brushes.rs  effects.rs  entities.rs  faces.rs  light_maps.rs  light_vols.rs  mod.rs  models.rs  planes.rs  textures.rs  tree.rs  vertices.rs  visdata.rs
stockton-passes/: Cargo.toml
stockton-passes/src/: camera.rs  level.rs  ui.rs  window.rs
stockton-passes/src/data/: 3d.vert  ui.frag  ui.vert
stockton-render/: Cargo.toml
stockton-render/src/: camera.rs  context.rs  culling.rs  error.rs  level.rs  lib.rs  queue_negotiator.rs  systems.rs  target.rs  types.rs  ui.rs  walk_bsp.rs  window.rs
stockton-render/src/buffers/: dedicated_image.rs  mod.rs
stockton-render/src/builders/: pipeline.rs
stockton-render/src/draw/: buffer.rs  camera.rs  context.rs  depth_buffer.rs  draw_buffers.rs  frame.rs  macros.rs  mod.rs  pipeline.rs  queue_negotiator.rs  render.rs  target.rs  texture.rs  utils.rs  vertexlump.rs
stockton-render/src/draw/buffers/: dedicated_image.rs  draw_buffers.rs  mod.rs  staged.rs
stockton-render/src/draw/builders/: mod.rs  pipeline.rs  renderpass.rs  shader.rs
stockton-render/src/draw/data/: stockton.frag  stockton.vert
stockton-render/src/draw/draw_passes/: cons.rs  level.rs  mod.rs  ui.rs  util.rs
stockton-render/src/draw/texture/: block.rs  chunk.rs  image.rs  load.rs  loader.rs  mod.rs  repo.rs  resolver.rs  staging_buffer.rs
stockton-render/src/draw/ui/: mod.rs  pipeline.rs  render.rs  texture.rs
stockton-render/src/draw/ui/data/: stockton.frag  stockton.vert
stockton-render/src/draw_passes/: cons.rs  mod.rs  util.rs
stockton-render/src/texture/: image.rs  load.rs  loader.rs  repo.rs
stockton-skeleton/: Cargo.toml
stockton-skeleton/src/: context.rs  error.rs  lib.rs  mem.rs  queue_negotiator.rs  target.rs  types.rs  utils.rs
stockton-skeleton/src/buffers/: draw.rs  image.rs  mod.rs  staged.rs  staging.rs
stockton-skeleton/src/builders/: mod.rs  pipeline.rs  renderpass.rs  shader.rs
stockton-skeleton/src/components/: mod.rs
stockton-skeleton/src/draw_passes/: cons.rs  mod.rs  util.rs
stockton-skeleton/src/texture/: block.rs  image.rs  load.rs  loader.rs  mod.rs  repo.rs  resolver.rs  staging_buffer.rs
stockton-types/: Cargo.toml
stockton-types/src/: ent_map.rs  entity_store.rs  lib.rs  session.rs  world.rs
stockton-types/src/components/: mod.rs
stockton-types/tests/: ent_map.rs  helpers.rs  world.rs
