[package]
name = "stockton-contrib"
version = "0.1.0"
authors = ["Oscar Shrimpton <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stockton-input = { path = "../stockton-input" }
stockton-types = { path = "../stockton-types" }
legion = { version = "^0.3" }

[features]
default = []

delta_time = []
flycam = []