[package]
name = "stockton-levels"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
description = "Traits relating to levels renderable by stockton."
repository = "https://github.com/tcmal/stockton"
homepage = "https://github.com/tcmal/stockton"
edition = "2018"

[dependencies]
nalgebra = "^0.20"
serde = { version = "1.0", features = ["derive"] }
stockton-types = { path = "../stockton-types" }
