[package]
name = "stockton-render"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

[dependencies]
stockton-input = { path = "../stockton-input" }
stockton-levels = { path = "../stockton-levels" }
stockton-types = { path = "../stockton-types" }
winit = "^0.21"
gfx-hal = "0.4.1"
arrayvec = "0.4.10"
nalgebra-glm = "^0.6"
shaderc = "^0.7"
log = "0.4.0"
image = "0.23.11"
legion = { version = "^0.3" }
egui = "^0.2"
rendy-memory = "0.5.2"
rendy-descriptor = "0.5.1"

[features]
default = ["vulkan"]
vulkan = ["gfx-backend-vulkan"]

[dependencies.gfx-backend-vulkan]
version = "0.4.1"
features = ["x11"]
optional = true
