[package]
name = "stockton-render"
version = "0.1.0"
authors = ["tcmal <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stockton-skeleton = { path = "../stockton-skeleton" }
stockton-types = { path = "../stockton-types" }
stockton-levels = { path = "../stockton-levels" }
stockton-input = { path = "../stockton-input" }
anyhow = "1.0.40"
egui = "^0.12"
epaint = "^0.12"
gfx-hal = "^0.8.0"
shaderc = "^0.7"
legion = { version = "^0.3" }
log = "0.4.0"
winit = "^0.21"
nalgebra-glm = "^0.6"
