[package]
name = "stockton-skeleton"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

[dependencies]
stockton-input = { path = "../stockton-input" }
stockton-levels = { path = "../stockton-levels" }
stockton-types = { path = "../stockton-types" }
winit = "^0.21"
gfx-hal = "^0.8.0"
arrayvec = "0.4.10"
nalgebra-glm = "^0.6"
shaderc = "^0.7"
log = "0.4.0"
image = "0.23.11"
legion = { version = "^0.3" }
rendy-memory = { path = "../rendy-memory" }
rendy-descriptor = { path = "../rendy-descriptor" }
anyhow = "1.0.40"
thiserror = "1.0.25"
derive_builder = "0.10.2"

[features]
default = ["vulkan"]
vulkan = ["gfx-backend-vulkan"]

[dependencies.gfx-backend-vulkan]
version = "^0.8.0"
optional = true
