[package]
name = "render-bsp"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]

[dependencies]
stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
stockton-types = { path = "../../stockton-types" }
stockton-bsp = { git = "https://github.com/tcmal/rust-bsp.git" }
winit = "^0.21"
simple_logger = "1.0"
image = "0.23.2"
