[package]
name = "render-bsp"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

[dependencies]
stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
stockton-types = { path = "../../stockton-types" }
stockton-levels = { path = "../../stockton-levels" }
winit = "^0.21"
log = "0.4.0"
simple_logger = "1.0"
image = "0.23.2"
