[package]
name = "render-bsp"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

[dependencies]
stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
stockton-input = { path = "../../stockton-input" }
stockton-input-codegen = { path = "../../stockton-input-codegen" }
stockton-types = { path = "../../stockton-types" }
stockton-levels = { path = "../../stockton-levels" }
stockton-contrib = { path = "../../stockton-contrib", features = ["delta_time", "flycam"] }
winit = "^0.21"
log = "0.4.0"
simple_logger = "^1.11"
image = "0.23.2"
egui = "^0.2"
legion = { version = "^0.3" }
