[package]
name = "render-quad"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

[dependencies]
stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
stockton-input = { path = "../../stockton-input" }
stockton-input-codegen = { path = "../../stockton-input-codegen" }
stockton-types = { path = "../../stockton-types" }
stockton-levels = { path = "../../stockton-levels" }
stockton-contrib = { path = "../../stockton-contrib", features = ["delta_time", "flycam"] }
winit = "^0.21"
log = "0.4.0"
simplelog = "^0.10"
image = "0.23.2"
egui = "^0.12"
legion = { version = "^0.3" }
anyhow = "1.0.40"
