[package]
name = "render-quad"
version = "0.1.0"
authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
edition = "2018"

[dependencies]
stockton-skeleton = { path = "../../stockton-skeleton", features = ["vulkan"] }
winit = "^0.21"
log = "0.4.0"
simplelog = "^0.10"
image = "0.23.2"
legion = { version = "^0.3" }
anyhow = "1.0.40"
gfx-hal = "^0.8.0"
